# Netease_url

./: .env  .gitignore  CLI使用手册.md  README.md  api_client.py  cli.py  cli_interactive.py  cli_tui.py  cookie.txt  pyproject.toml  qr_login.py  requirements-full.txt  run.sh  test_cli.sh  使用文档.md
.claude/: settings.local.json
cli/: __init__.py  commands.py  errors.py  formatters.py
docs/: CLI使用手册.md  CLI改造PRD.md  交互式CLI改造PRD.md
