[project]
name = "netease-music"
version = "2.0.0"
description = "网易云音乐无损解析工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "bot-duan" }
]

dependencies = [
    "flask>=3.0.3",
    "requests>=2.28.2",
    "cryptography>=40.0.2",
    "mutagen>=1.47.0",
    "qrcode>=8.2",
    "rich>=13.0.0",
    "aiohttp>=3.12.15",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.4.0",
    "attrs>=25.3.0",
    "blinker>=1.9.0",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "frozenlist>=1.7.0",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "markupsafe>=3.0.2",
    "multidict>=6.6.4",
    "propcache>=0.3.2",
    "pycparser>=2.22",
    "urllib3>=1.26.15",
    "werkzeug>=3.1.3",
    "yarl>=1.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
